prevent overflow in recommendations page

--- a/Flask App/static/css/recommender_styles.css
+++ b/Flask App/static/css/recommender_styles.css
@@ -4,6 +4,7 @@
 
 body {
     background-color: black;
+    overflow: hidden;
 }
 
 .title p { 
@@ -24,15 +25,14 @@ body {
 }
 
 .music {
+    margin: auto;
     height: 15%;
-    width: 90%;
-    max-width: 900px;
+    width: 900px;
     padding: 10px;
     box-shadow: 0 0 20px rgba(red, 0, 0, 0.4);
     background: #ffffff;
     color: #555;
     border-radius: 8px;
-    margin-left: 287px;
 }
 
 .track, .track2, .track3 {
@@ -51,3 +51,30 @@ body {
 .track div {
     flex: 1
 }
+
+/* @media (min-width: 1400px) {
+
+    .music {
+        width: 900px;
+        max-width: 800px;
+        padding: 10px;
+        margin-left: 0px;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+    }
+} */
+
+/* @media (min-width: 1024px) and (max-width: 1399px) {
+
+    .title p {
+        align-self: center;
+        font-size: 40px;
+    }
+
+    .music {
+        margin-left: 10rem;
+        width: 80%;
+        height: 15%;
+    }
+} */
